--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,8 @@ os-ext = [
 # Enables `mio::net` module containing networking primitives.
 net = []
 
+unstable = []
+
 [dependencies]
 log = { version = "0.4.8", optional = true }
 
